--- a/plugin.xml
+++ b/plugin.xml
@@ -12,7 +12,7 @@
     <keywords>cordova,apk,installer,plugin</keywords>
 
     <engines>
-	    <engine name="cordova" version=">=3.2.0" />
+	    <engine name="cordova-android" version=">5.0.0"/>
     </engines>
 
     <js-module src="www/apk-installer.js" name="apk-installer">
@@ -20,6 +20,9 @@
     </js-module>
 
     <platform name="android">
+        <preference name="ANDROID_SUPPORT_V4_VERSION" default="26.+" />
+        <framework src="com.android.support:support-v4:$ANDROID_SUPPORT_V4_VERSION" />
+
         <config-file target="config.xml" parent="/*">
             <feature name="ApkInstallerPlugin">
                 <param name="android-package" value="de.amicaldo.cordova.plugin.ApkInstallerPlugin" />
@@ -47,6 +50,7 @@
         </config-file>
 
         <source-file src="src/android/ApkInstallerPlugin.java" target-dir="src/plugin/apkInstaller/"/>
+        <source-file src="src/android/ApkInstallerProvider.java" target-dir="src/plugin/apkInstaller/"/>
         <source-file src="src/android/xml/file_paths.xml" target-dir="res/xml/"/>
     </platform>
 </plugin>
